# quadrotor-vdm-aided-ins

./: CMakeLists.txt  README.md  package.xml
config/: quad_params_vdm_ins.yaml  vdm_ins_PlotJuggler_Layout.xml
include/quadrotor_vdm_aided_ins/: v_tools.h  vdm_ins.h
launch/: vdm_ins.launch
results/: 2022-07-12-22-54-12-quadrotor-pose.csv  plotter.py
src/: vdm_ins.cpp  vdm_ins_node.cpp
