<?xml version="1.0"?>
<package format="2">
    <name>quadrotor_vdm_aided_ins</name>
    <version>0.0.1</version>
    <description>Quadrotor Vehicle Dynamic Model (VDM)-aided Inertial Navigation System (INS)</description>

    <maintainer email="primastyaputra@gmail.com">Bagaskara Primastya Putra</maintainer>

    <license>GPL-3.0</license>

    <author>Bagaskara Primastya Putra</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>

    <export>
    </export>
</package>
